--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>TESTER</h1>
+    <title>Node Summit Code Editor</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
 
+        #container {
+            height: 100vh;
+            width: 100vw;
+        }
+
+        .monaco-editor {
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+ </head>
+<body>
+    <div id="container"></div>
+    <script>
+        require('./renderer')
+    </script>
 </body>
 </html>
